--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>浏览器起始页 IE 专供版（确信</title>
+    <title>请升级你的浏览器</title>
     <meta charset="utf-8">
     <style>
         .container {
