--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<title>请升级你的浏览器</title>
 	<meta name=description content="这是一个 IE 升级提示页，您可以通过本页介绍快速了解为何要升级 IE 浏览器以及如何升级浏览器。">
-	<!--<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>-->
+	<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
 	<meta http-equiv=Cache-Control content=no-siteapp>
 	<meta http-equiv=Cache-Control content=no-transform>
 	<link href="https://ie.xzcn.pages.dev/assets/css/page.css" rel="stylesheet" type="text/css"/>
