--- a/index.en.html
+++ b/index.en.html
@@ -1,1 +1,53 @@
-英文版，待更新
+<!DOCTYPE html>
+<html lang=zh-Hans>
+<head>
+	<meta charset=utf-8>
+	<meta name=renderer content=webkit>
+	<meta name=force-rendering content=webkit>
+	<meta http-equiv=X-UA-Compatible content="IE=Edge,chrome=1">
+	<meta name=viewport content="width=device-width, initial-scale=1.0">
+	<title>Please upgrade your browser</title>
+	<meta name=description content="This is an Internet Explorer upgrade prompt page. You can quickly learn why and how to upgrade Internet Explorer. ">
+	<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
+	<meta http-equiv=Cache-Control content=no-siteapp>
+	<meta http-equiv=Cache-Control content=no-transform>
+	<link href="https://ie.xzcn.pages.dev/assets/css/page.css" rel="stylesheet" type="text/css"/>
+	<link rel=icon href="https://ie.xzcn.pages.dev/assets/image/msie.png">
+</head>
+<body>
+	<div class=page>
+		<h1>Please upgrade your browser</h1>
+		<h2>🌏 <a target="_self" href="https://ie.xiaozhao233.top" id=browser-chrome-link>简体中文</a> | <a target="_self" href="https://ie.xiaozhao233.top/index.zh-hant.html" id=browser-chrome-link>繁體中文</a> | <a target="_self" href="https://ie.xiaozhao233.top/index.en.html" id=browser-chrome-link>English</a> 🌏</h2>
+		<p>[More than half of the text uses machine translation, so there may be some unclear meaning and mixed words. If you are willing to provide help to this public welfare project, please contact the project leader Xiao Zhao (E-Mail: xiaozhao [at] w3c.email).]</p>
+		<p>You are using Internet Explorer (or other browser using IE Rendering Engine). This means that you will not be able to access our website until you upgrade your browser.</p>
+		<div class=hr></div>
+		<h2>Please note: Internet Explorer support services have been terminated</h2>
+		<p>After January 12, 2016, Microsoft no longer provides corresponding support and updates for IE 11 and below.  Without critical browser security updates, your computer may be vulnerable to harmful viruses, spyware, and other malicious software that can steal or damage your business data and information. </p>
+		<p>Since November 30, 2020, the web version of Microsoft Teams can no longer be accessed using Internet Explorer 11. The remaining Microsoft 365 applications will drop support for IE11 on August 17, 2021. The browser itself will continue to be supported for the lifecycle of the Windows version on which it is installed until June 15, 2022.Microsoft recommends Internet Explorer users migrate to Edge and use the built-in "Internet Explorer mode" which enables support for legacy internet applications. </p>
+		<div class=hr></div>
+		<h2>More advanced browsers</h2>
+		<p class=targetline>It is recommended to use the following browser, click to go to the official website.</p>
+		<ul id=browser-list class=browser-list>
+			<li class="browser chrome">
+				<a target="_blank" href="https://www.google.com/chrome/" id=browser-chrome-link><img src="https://ie.xzcn.pages.dev/assets/image/chrome.png" width=34 height=34 alt=Chrome>Chrome <span id=browser-chrome-badge>Google Chrome</span></a>
+			</li>
+			<li class="browser edge">
+				<a target="_blank" href="https://www.microsoft.com/en-us/edge/home" id=browser-edge-link><img src="https://ie.xzcn.pages.dev/assets/image/msedge.png" width=34 height=34 alt=Edge>Edge<span id=browser-edge-badge>Microsoft Edge</span></a>
+			</li>
+			<li class="browser firefox">
+				<a target="_blank" href="https://www.mozilla.org/en-US/firefox/browsers/" id=browser-firefox-link><img src="https://ie.xzcn.pages.dev/assets/image/firefox.png" width=34 height=34 alt=Firefox>Firefox<span id=browser-firefox-badge>Mozilla Firefox</span></a>
+			</li>
+			<li class="browser opera">
+				<a target="_blank" href="https://www.opera.com/" id=browser-opera-link><img src="https://ie.xzcn.pages.dev/assets/image/opera.png" width=34 height=34 alt=Opera>Opera<span id=browser-opera-badge>Opera Browser</span></a>
+			</li>
+		</ul>
+		<div class=hr></div>
+		<h2>Boycott IE together</h2>
+		<p><a target="_blank" href="https://en.wikipedia.org/wiki/Internet_Explorer#Security_vulnerabilities">Wikipedia: Criticism of Internet Explorer</a></p>
+		<p>In order to be compatible with this former browser overlord, web designers need to do a lot of code work. For ordinary users, the low version of IE is a precarious security risk. In the history of Windows, several major Trojan virus incidents have used IE vulnerabilities to spread. So, please join us in boycotting outdated versions of IE! </p>
+		<div class=hr></div>
+		<h2>Developer support</h2>
+		<p>You can introduce <a target="_blank" href="https://ie.xiaozhao233.top/core.js">https://ie.xiaozhao233.top/core.js</a> to access this website, the program will automatically determine the IE (including IE 11) IE and jump to the corresponding language when judging success of upgrade prompt pages, currently support simplified/traditional Chinese and English. You can use the project for free forever, saving you the material costs of page design, text writing, code development, and your more precious time. </p>
+	</div>
+</body>
+</html>
