--- a/index.zh-hant.html
+++ b/index.zh-hant.html
@@ -1,1 +1,52 @@
-繁体中文，待更新
+<!DOCTYPE html>
+<html lang="zh-TW">
+	<head>
+		<meta charset=utf-8>
+		<meta name=renderer content=webkit>
+		<meta name=force-rendering content=webkit>
+		<meta http-equiv=X-UA-Compatible content="IE=Edge,chrome=1">
+		<meta name=viewport content="width=device-width, initial-scale=1.0">
+		<title>請升級你的瀏覽器</title>
+		<meta name=description content="這是一個 IE 升級提示頁，您可以通過本頁介紹快速瞭解爲何要升級 IE 瀏覽器以及如何升級瀏覽器。">
+		<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
+		<meta http-equiv=Cache-Control content=no-siteapp>
+		<meta http-equiv=Cache-Control content=no-transform>
+		<link href="https://ie.xzcn.pages.dev/assets/css/page.css" rel="stylesheet" type="text/css"/>
+		<link rel=icon href="https://ie.xzcn.pages.dev/assets/image/msie.png">
+	</head>
+<body>
+	<div class=page>
+		<h1>請升級你的瀏覽器</h1>
+		<h2>🌏 <a target="_self" href="https://ie.xiaozhao233.top" id=browser-chrome-link>简体中文</a> | <a target="_self" href="https://ie.xiaozhao233.top/index.zh-hant.html" id=browser-chrome-link>繁體中文</a> | <a target="_self" href="https://ie.xiaozhao233.top/index.en.html" id=browser-chrome-link>English</a> 🌏</h2>
+		<p>你正在使用 Internet Explorer（或使用 IE 内核的瀏覽器）。這意味著在升級瀏覽器前，你將無法訪問我們的網站。</p>
+		<div class=hr></div>
+		<h2>請注意： Internet Explorer 的支持服務已終止</h2>
+		<p>自 2016 年 1 月 12 日起，微軟不再為 IE 11 以下版本提供相應支持和更新。沒有關鍵的瀏覽器安全更新，您的電腦可能易受有害病毒、間諜軟體和其他惡意程式的攻擊，他們可以竊取或損害您的業務數據和信息。請參閲 <a href='https://www.microsoft.com/zh-tw/WindowsForBusiness/End-of-IE-support'>微軟對舊版 Internet Explorer 的支持服務已終止的説明</a>。</p>
+		<p>自 2020 年 11 月 30 日起，無法再使用 Internet Explorer 11 訪問 Web 版 Microsoft Teams。其餘 Microsoft 365 應用程式於 2021 年 8 月 17 日停止支持 IE 11。瀏覽器本身將在整個生命周期内繼續受支持安裝它的 Windows 版本直到 2022 年 6 月 15 日。Microsoft 建議 Internet Explorer 用戶遷移到 Edge 并使用内置的“Internet Explorer 模式”，該模式支持舊版 Internet 應用程式。</p>
+		<div class=hr></div>
+		<h2>更先進的瀏覽器</h2>
+		<p class=targetline>推薦使用以下瀏覽器，點擊即可前往官方網站。</p>
+		<ul id=browser-list class=browser-list>
+			<li class="browser chrome">
+				<a target="_blank" href="https://www.google.com/chrome/" id=browser-chrome-link><img src="https://ie.xzcn.pages.dev/assets/image/chrome.png" width=34 height=34 alt=谷歌瀏覽器>谷歌瀏覽器 <span id=browser-chrome-badge>Google Chrome</span></a>
+			</li>
+			<li class="browser edge">
+				<a target="_blank" href="https://www.microsoft.com/zh-tw/edge/home" id=browser-edge-link><img src="https://ie.xzcn.pages.dev/assets/image/msedge.png" width=34 height=34 alt=微軟瀏覽器>微軟瀏覽器<span id=browser-edge-badge>Microsoft Edge</span></a>
+			</li>
+			<li class="browser firefox">
+				<a target="_blank" href="https://www.mozilla.org/zh-TW/firefox/" id=browser-firefox-link><img src="https://ie.xzcn.pages.dev/assets/image/firefox.png" width=34 height=34 alt=火狐瀏覽器>火狐瀏覽器<span id=browser-firefox-badge>Mozilla Firefox</span></a>
+			</li>
+			<li class="browser opera">
+				<a target="_blank" href="https://www.opera.com/" id=browser-opera-link><img src="https://ie.xzcn.pages.dev/assets/image/opera.png" width=34 height=34 alt=歐朋瀏覽器>歐朋瀏覽器<span id=browser-opera-badge>Opera Browser</span></a>
+			</li>
+		</ul>
+		<div class=hr></div>
+		<h2>一起抵制 IE</h2>
+		<p><a target="_blank" href="https://zh.wikipedia.org/zh-tw/%E5%AF%B9Internet_Explorer%E7%9A%84%E6%89%B9%E8%AF%84">維基百科:對 Internet Explorer 的批評</a></p>
+		<p>爲了兼容這個曾經的瀏覽器霸主，網頁設計人員需要做大量的代碼工作。對於普通用戶而言，低版本 IE 更是一個岌岌可危的安全隱患，在 Windows 歷史上幾次大的木馬病毒事件都是利用 IE 漏洞進行傳播。所以，請和我們一起抵制 IE！</p>
+		<div class=hr></div>
+		<h2>開發者支持</h2>
+		<p>您可以通過引入 <a target="_blank" href="https://ie.xiaozhao233.top/core.js">https://ie.xiaozhao233.top/core.js</a> 以接入本站，該 js 會自動判定 IE（包括 IE 11）并在判斷成功時跳轉至對應語言的升級提示頁面，目前支持簡/繁體中文及英文。您可以永久免費使用該項目，這樣可以幫您省下頁面設計、文本編寫、代碼開發的物質成本以及您更加珍貴的時間成本。</p>
+	</div>
+</body>
+</html>
