--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<a target="_blank" href="https://ie.xiaozhao233.top/download/firefox" id=browser-firefox-link><img src="https://ie.xzcn.pages.dev/assets/image/firefox.png" width=34 height=34 alt=火狐浏览器>火狐浏览器<span id=browser-firefox-badge>Mozilla Firefox</span></a>
 			</li>
 			<li class="browser opera">
-				<a target="_blank" href="https://ie.xiaozhao233.top/download/opera" id=browser-opera-link><img src="https://ie.xzcn.pages.dev/assets/image/opera.png" width=34 height=34 alt=欧朋浏览器>欧朋浏览器<span id=browser-opera-badge>Opera Browser</span></a>
+				<a target="_blank" href="https://www.opera.com/zh-cn/download" id=browser-opera-link><img src="https://ie.xzcn.pages.dev/assets/image/opera.png" width=34 height=34 alt=欧朋浏览器>欧朋浏览器<span id=browser-opera-badge>Opera Browser</span></a>
 			</li>
 		</ul>
 		<div class=hr></div>
