--- a/download/index.html
+++ b/download/index.html
@@ -25,7 +25,7 @@
 	<li><a href="https://ie.xiaozhao233.top/download/edge" title="Microsoft Edge" class="folder ">微软 Edge 浏览器（推荐）</a>
 	<li><a href="https://ie.xiaozhao233.top/download/firefox" title="Mozilla Firefox" class="folder ">火狐浏览器（推荐）</a>
 	<li><a href="https://www.opera.com/zh-cn/" title="Opera Browser" class="forward ">欧朋浏览器</a>
-	<li><a href="https://consumer.huawei.com/cn/mobileservices/browser/" title="360 Browser" class="forward ">华为浏览器</a>
+	<li><a href="https://consumer.huawei.com/cn/mobileservices/browser/" title="Huawei Browser" class="forward ">华为浏览器</a>
 	<li><a href="https://www.maxthon.cn/" title="Maxthon Browser" class="forward ">遨游浏览器</a>
 	<li><a href="https://github.com/XZCN233/Internet-Explorer" title="XZCN233/Internet-Explorer" class="github ">前往项目 GitHub 地址</a>
 </ul>
