--- a/download/firefox/index.html
+++ b/download/firefox/index.html
@@ -3,9 +3,9 @@
 		<meta charset=utf-8>
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<title>火狐浏览器</title>
-		<link rel=icon href="https://ie.xzcn.pages.dev/assets/image/firefox.png">
+		<link rel=icon href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/firefox.png">
 		<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
-		<link href="https://ie.xzcn.pages.dev/assets/css/download.css" rel="stylesheet" type="text/css"/>
+		<link href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/css/download.css" rel="stylesheet" type="text/css"/>
 	<main>
 <header>
 	<h1>
@@ -24,8 +24,6 @@
 <ul id=files>
 	<li><a href="https://download-ssl.firefox.com.cn/releases-sha2/stub/official/zh-CN/Firefox-latest.exe" title="China Firefox" class="file ">国内版</a>
 	<li><a href="https://download.mozilla.org/?product=firefox-stub&os=win&lang=zh-CN&attribution_code=c291cmNlPShub3Qgc2V0KSZtZWRpdW09KGRpcmVjdCkmY2FtcGFpZ249KG5vdCBzZXQpJmNvbnRlbnQ9KG5vdCBzZXQpJmV4cGVyaW1lbnQ9KG5vdCBzZXQpJnZhcmlhdGlvbj0obm90IHNldCkmdWE9Y2hyb21lJnZpc2l0X2lkPShub3Qgc2V0KQ..&attribution_sig=83a86b4f392a0e59dfa8d499076c1ca638f8cc30133e5152b78bd1e1ffd098db" title="Mozilla Firefox" class="file ">国际版（推荐）</a>
-	<li><a onclick="alert('数据更新日期：2022 年 12 月 27 日')" title="2022 年 12 月 27 日" class="date ">数据更新日期</a>
-	<li><a onclick="alert('数据更新日期：2022 年 12 月 27 日')" title="数据更新日期" class="date ">2022 年 12 月 27 日</a>
 	<li><a href="https://github.com/XZCN233/Internet-Explorer" title="XZCN233/Internet-Explorer" class="github ">前往项目 GitHub 地址</a>
 </ul>
 </main>
