--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
 	<meta http-equiv=Cache-Control content=no-siteapp>
 	<meta http-equiv=Cache-Control content=no-transform>
-	<link href="https://ie.xzcn.pages.dev/assets/css/page.css" rel="stylesheet" type="text/css"/>
-	<link rel=icon href="https://ie.xzcn.pages.dev/assets/image/msie.png">
+	<link href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/css/page.css" rel="stylesheet" type="text/css"/>
+	<link rel=icon href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/msie.png">
 </head>
 <body>
 	<div class=page>
@@ -28,16 +28,16 @@
 		<p class=targetline>推荐使用以下浏览器，点击即可前往下载页，安装包均下载自官网或外链至官网。</p>
 		<ul id=browser-list class=browser-list>
 			<li class="browser chrome">
-				<a target="_blank" href="https://ie.xiaozhao233.top/download/chrome" id=browser-chrome-link><img src="https://ie.xzcn.pages.dev/assets/image/chrome.png" width=34 height=34 alt=谷歌浏览器>谷歌浏览器 <span id=browser-chrome-badge>Google Chrome</span></a>
+				<a target="_blank" href="https://ie.xiaozhao233.top/download/chrome" id=browser-chrome-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/chrome.png" width=34 height=34 alt=谷歌浏览器>谷歌浏览器 <span id=browser-chrome-badge>Google Chrome</span></a>
 			</li>
 			<li class="browser edge">
-				<a target="_blank" href="https://ie.xiaozhao233.top/download/edge" id=browser-edge-link><img src="https://ie.xzcn.pages.dev/assets/image/msedge.png" width=34 height=34 alt=微软浏览器>微软浏览器<span id=browser-edge-badge>Microsoft Edge</span></a>
+				<a target="_blank" href="https://ie.xiaozhao233.top/download/edge" id=browser-edge-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/msedge.png" width=34 height=34 alt=微软浏览器>微软浏览器<span id=browser-edge-badge>Microsoft Edge</span></a>
 			</li>
 			<li class="browser firefox">
-				<a target="_blank" href="https://ie.xiaozhao233.top/download/firefox" id=browser-firefox-link><img src="https://ie.xzcn.pages.dev/assets/image/firefox.png" width=34 height=34 alt=火狐浏览器>火狐浏览器<span id=browser-firefox-badge>Mozilla Firefox</span></a>
+				<a target="_blank" href="https://ie.xiaozhao233.top/download/firefox" id=browser-firefox-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/firefox.png" width=34 height=34 alt=火狐浏览器>火狐浏览器<span id=browser-firefox-badge>Mozilla Firefox</span></a>
 			</li>
 			<li class="browser opera">
-				<a target="_blank" href="https://www.opera.com/zh-cn/download" id=browser-opera-link><img src="https://ie.xzcn.pages.dev/assets/image/opera.png" width=34 height=34 alt=欧朋浏览器>欧朋浏览器<span id=browser-opera-badge>Opera Browser</span></a>
+				<a target="_blank" href="https://www.opera.com/zh-cn/download" id=browser-opera-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/opera.png" width=34 height=34 alt=欧朋浏览器>欧朋浏览器<span id=browser-opera-badge>Opera Browser</span></a>
 			</li>
 		</ul>
 		<div class=hr></div>
