--- a/index.zh-hant.html
+++ b/index.zh-hant.html
@@ -11,8 +11,8 @@
 		<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
 		<meta http-equiv=Cache-Control content=no-siteapp>
 		<meta http-equiv=Cache-Control content=no-transform>
-		<link href="https://ie.xzcn.pages.dev/assets/css/page.css" rel="stylesheet" type="text/css"/>
-		<link rel=icon href="https://ie.xzcn.pages.dev/assets/image/msie.png">
+		<link href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/css/page.css" rel="stylesheet" type="text/css"/>
+		<link rel=icon href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/msie.png">
 	</head>
 <body>
 	<div class=page>
@@ -28,16 +28,16 @@
 		<p class=targetline>推薦使用以下瀏覽器，點擊即可前往官方網站。</p>
 		<ul id=browser-list class=browser-list>
 			<li class="browser chrome">
-				<a target="_blank" href="https://www.google.com/chrome/" id=browser-chrome-link><img src="https://ie.xzcn.pages.dev/assets/image/chrome.png" width=34 height=34 alt=谷歌瀏覽器>谷歌瀏覽器 <span id=browser-chrome-badge>Google Chrome</span></a>
+				<a target="_blank" href="https://www.google.com/chrome/" id=browser-chrome-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/chrome.png" width=34 height=34 alt=谷歌瀏覽器>谷歌瀏覽器 <span id=browser-chrome-badge>Google Chrome</span></a>
 			</li>
 			<li class="browser edge">
-				<a target="_blank" href="https://www.microsoft.com/zh-tw/edge/home" id=browser-edge-link><img src="https://ie.xzcn.pages.dev/assets/image/msedge.png" width=34 height=34 alt=微軟瀏覽器>微軟瀏覽器<span id=browser-edge-badge>Microsoft Edge</span></a>
+				<a target="_blank" href="https://www.microsoft.com/zh-tw/edge/home" id=browser-edge-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/msedge.png" width=34 height=34 alt=微軟瀏覽器>微軟瀏覽器<span id=browser-edge-badge>Microsoft Edge</span></a>
 			</li>
 			<li class="browser firefox">
-				<a target="_blank" href="https://www.mozilla.org/zh-TW/firefox/" id=browser-firefox-link><img src="https://ie.xzcn.pages.dev/assets/image/firefox.png" width=34 height=34 alt=火狐瀏覽器>火狐瀏覽器<span id=browser-firefox-badge>Mozilla Firefox</span></a>
+				<a target="_blank" href="https://www.mozilla.org/zh-TW/firefox/" id=browser-firefox-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/firefox.png" width=34 height=34 alt=火狐瀏覽器>火狐瀏覽器<span id=browser-firefox-badge>Mozilla Firefox</span></a>
 			</li>
 			<li class="browser opera">
-				<a target="_blank" href="https://www.opera.com/" id=browser-opera-link><img src="https://ie.xzcn.pages.dev/assets/image/opera.png" width=34 height=34 alt=歐朋瀏覽器>歐朋瀏覽器<span id=browser-opera-badge>Opera Browser</span></a>
+				<a target="_blank" href="https://www.opera.com/" id=browser-opera-link><img src="https://gh.xiaozhao233.top/ie.xiaozhao233.top/image/opera.png" width=34 height=34 alt=歐朋瀏覽器>歐朋瀏覽器<span id=browser-opera-badge>Opera Browser</span></a>
 			</li>
 		</ul>
 		<div class=hr></div>
