--- a/download/index.html
+++ b/download/index.html
@@ -4,7 +4,7 @@
 		<meta name=viewport content="width=device-width,initial-scale=1">
 		<title>请在此选择你需要下载的浏览器</title>
 		<script src="https://gh.xiaozhao233.top/scripts/anti-piracy.js"></script>
-		<link href="https://ie.xzcn.pages.dev/assets/css/download.css" rel="stylesheet" type="text/css"/>
+		<link href="https://gh.xiaozhao233.top/ie.xiaozhao233.top/css/download.css" rel="stylesheet" type="text/css"/>
 	<main>
 <header>
 	<h1>
